Clean up and turn off dev night mode

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,19 +1,9 @@
 /* TODO Add site wide styles */
 
-body {
-  color: white;
-  background-color: black;
-}
-
-input {
-  color: white;
-  background-color: black;
-  border: 1px solid white;
-}
-
-a {
-  color: white;
-}
+/* ~~~~~~~~~~~~~~~ Developer Night Mode ~~~~~~~~~~~~~~~ */
+/* body {color: white;background-color: black;}
+input {color: white; background-color: black; border: 1px solid white;}
+a {color: white;} */
 
 img {
   width: 500px;
