--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -8,7 +8,7 @@ a {color: white;} */
 body {
   width: 500px;
   display: block;
-  margin: 50px auto;
+  margin: 20px auto;
 }
 
 img {
@@ -20,6 +20,34 @@ summary {
   transition: 2s;
 }
 
-.center-text {
+home {
   text-align: center;
+}
+
+home p {
+  line-height: 20px;
+}
+
+home h1 {
+  margin-top: 70px;
+}
+
+navbar {
+  margin-bottom: 70px;
+}
+
+navbar a {
+  color: dodgerblue;
+  margin-right: 5px;
+  font-size: 13px;
+  text-transform: lowercase;
+}
+
+navbar button {
+  background: none;
+  border: none;
+  color: dodgerblue;
+  font-family: serif;
+  text-decoration: underline;
+  padding: 0;
 }
