--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -14,8 +14,15 @@ body {
 }
 
 img {
-  width: 500px;
-  display: block;
+  width: 100%;
+}
+
+.postimg-div {
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
+  background-position: center;
+  background-size: cover;
 }
 
 summary {
@@ -185,7 +192,7 @@ page h1 {
 page .links-ul {
   padding-left: 0;
   margin-top: 0px;
-  margin-bottom: 17.5px;
+  margin-bottom: 0;
 }
 
 page .links-ul li {
@@ -219,6 +226,9 @@ page .page-location {
 
 page .user-links-ul {
   padding-left: 0;
+  margin-bottom: 0;
+  margin-top: 0;
+  height: 22px;
 }
 
 page .user-links-ul li {
@@ -238,10 +248,11 @@ page .user-links-ul button {
   text-decoration: none;
 }
 
-page .user-links-ul li a {
+page .user-links-ul li a, page .user-links-ul li button {
   color: cornflowerblue;
   font-size: 12px;
   text-decoration: none;
+  cursor: pointer;
 }
 
 page vr {
@@ -258,12 +269,12 @@ page .posts-ul {
   padding-left: 0;
 }
 
-page .posts-ul li {
+page .posts-ul > li {
   list-style: none;
   margin-bottom: 50px;
 }
 
-page .posts-ul li a {
+page .posts-ul > li > a {
   text-decoration: none;
   color: black;
 }
@@ -273,13 +284,18 @@ page .posts-ul li h2 {
   margin-top: 0;
 }
 
+page .posts-ul p {
+  font-weight: 100;
+  margin-bottom: 3px;
+}
+
 post .post-li {
   color: cornflowerblue;
 }
 
-post .post-li img {
+/* post .post-li img {
   max-width: 100%;
-}
+} */
 
 post li.post-li a h3 {
   text-decoration: none;
