Style and add top border to page user links

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -192,7 +192,7 @@ page h1 {
 page .links-ul {
   padding-left: 0;
   margin-top: 0px;
-  margin-bottom: 0;
+  margin-bottom: 10px;
 }
 
 page .links-ul li {
@@ -226,9 +226,11 @@ page .page-location {
 
 page .user-links-ul {
   padding-left: 0;
+  padding-top: 5px;
   margin-bottom: 0;
-  margin-top: 0;
+  margin-top: 10px;
   height: 22px;
+  border-top: .5px solid cornflowerblue;
 }
 
 page .user-links-ul li {
