--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -97,8 +97,8 @@ splash button {
   margin-left: 2.5px;
 }
 
-#root home {
-  max-width: 85%;
+#root home, #root page {
+  max-width: 87.5%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -110,7 +110,7 @@ home h1 {
   text-transform: lowercase;
   font-size: 45px;
   margin-bottom: 0px;
-  margin-top: 75px;
+  margin-top: 50px;
 }
 
 home h2 {
