Add scroll reset to App.js useEffect

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -309,7 +309,8 @@ page .posts-ul p {
 }
 
 page .pageheader {
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
+  margin-bottom: 65px;
 }
 
 post .post-li {
