--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -420,3 +420,23 @@ login vr, .styled-form vr, page vr, postcreate vr, postedit vr, pagecreate vr, p
   padding-top: 6.5px;
   padding-bottom: 6.5px;
 }
+
+.textbox-input {
+  /* overflow-wrap: break-word;
+  overflow: hidden;
+  inline-size: 50px;
+  width: 50px;
+  height: 50px; */
+  width: 210px;
+  height: 80px;
+  resize: none;
+}
+
+details {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+details summary {
+  margin-bottom: 15px;
+}
