Change readme to test new repo name

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -474,7 +474,7 @@ details summary {
 
 .splash-title {
   /* font-family: 'Merriweather', serif; */
-  font-family: 'Lora', serif;
+  font-family: 'Lora';
   font-weight: 400;
   margin-bottom: 15px;
 }
